--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </div>
 
 <section class="uk-margin-small-left uk-margin-small-right uk-margin-xlarge-top uk-margin-xlarge-bottom">
-    <h1 class="uk-margin-xlarge-left uk-light uk-text-left uk-margin-xlarge-right">I'm Arya or you can call me Neil. I am an <br>Enterprenuer, Engineer, Teacher, Freelancer.</h1>
+    <h1 class="uk-margin-xlarge-left uk-light uk-text-left uk-margin-xlarge-right">I'm Arya or you can call me Neil. I am an <br>Enterprenuer, Engineer, and Teacher.</h1>
     <a href="#about" class="uk-margin-xlarge-left uk-text-capitalize uk-button uk-button-secondary" uk-scroll>About Me</a>
     <br>
     <br>
