--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Arya Praneil Pritesh>
+    <meta name="description" content="Founder and CEO of Aryavart Creations, A part time teacher and A student."
     <meta name="keywords" content="Arya, Praneil, Pritesh, Arya Praneil, Arya Praneil Pritesh">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
